fix: layout overflow

--- a/src/pages/_Layout/Sider/index.css
+++ b/src/pages/_Layout/Sider/index.css
@@ -4,6 +4,7 @@
   flex-shrink: 0;
   transition: width 0.3s;
   box-shadow: 0 0 15px #aaaaaa50;
+  overflow: auto;
 }
 
 .sider.collapsed {
