--- a/src/pages/_Layout/index.css
+++ b/src/pages/_Layout/index.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   height: 100vh;
   width: 100vw;
+  min-height: 0;
 }
 
 .row {
